# NinjaRobotV2

./: .env  Check_Gemini_Models.py  Ninja_Buzzer.py  Ninja_Distance.py  Ninja_Gemini_v1.py  Ninja_Movements_v1.py  ReconstructionGuide.md  ninja_core.py  pyproject.toml  readme.md  setup.sh  web_interface.py
src/ninja_robot/: __init__.py  brain.py  calibration.py  config.py  hat_driver.py  logger.py  main.py  movement.py  sensors.py
src/ninja_robot/voice/: gemini_client.py  speech.py
src/ninja_robot/web/: app.py  routes.py
src/ninja_robot/web/templates/: index.html
templates/: index.html  readme.md
tests/: integration_test.py
